# rva-2024

./: .gitignore  ANSI_terminal_operators.py  README.md  main.py  object_recognition.py  object_tracking.py  pyproject.toml  requirements.txt  sandbocv.py
Camera/: TUTORIAL.md  calibrate.py  calibration.pkl  cameraMatrix.pkl  dist.pkl  images.py  read_pkl.py
UI/: ANSI_terminal_operators.py  info_texts.py  main.py  menu.py
UseCases/: 3dreconstruct.py  __init__.py  image_segmentation.py  object_recognition.py  object_reconstruct.py  object_tracking.py  train_model.py
